--- a/nba.html
+++ b/nba.html
@@ -34,8 +34,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="time">Time</label>
-                        <input type="text" id="time" required placeholder="e.g., 7:00 PM EST">
+                        <label for="time">Time (IST)</label>
+                        <input type="text" id="time" required placeholder="e.g., 7:00 PM IST (auto-converts to EST)">
                     </div>
 
                     <button type="submit" class="btn-generate">Generate Content</button>
@@ -74,7 +74,7 @@
     <script src="script.js"></script>
     <script>
         const templates = {
-            title: `{Team A} vs {Team B} LIVE | NBA Live Score | {Date}`,
+            title: `{Team A} Vs {Team B} Live | NBA | PLAY BY PLAY | SCOREBOARD`,
             
             description: `{Team A} vs {Team B} LIVE score updates and
 play-by-play coverage on Scorzy for NBA.
