Refactor NBA bulk generator HTML structure

--- a/nba.html
+++ b/nba.html
@@ -94,44 +94,7 @@ date = December 12, 2025
     <script>
         const templates = {
             title: `{Team A} Vs {Team B} Live | NBA | PLAY BY PLAY | SCOREBOARD`,
-            
-play-by-play coverage on Scorzy for NBA.
-Follow real-time scoring, stats, and possession-by-possession updates.
-
-🆚 Match: {Team A} vs {Team B}
-🏀 League: NBA
-📅 Date: {Date}
-⏰ Time: {Time}
-📍 Coverage: Live Score & Play-by-Play
-
-Scorzy brings you fast, accurate NBA live score coverage with
-real-time updates, team stats, momentum tracking, and key game moments.
-Stay connected throughout the game with continuous scoring updates
-and live commentary-style coverage.
-
-📊 This Scorzy LIVE stream includes:
-✔ NBA live score updates
-✔ Play-by-play tracking
-✔ Team & player statistics
-✔ Possession and momentum updates
-✔ Live match flow coverage
-
-🔍 Search Keywords:
-{Team A} vs {Team B} live score
-NBA live
-{Team A} vs {Team B} today
-NBA live score
-NBA live updates
-
-#️⃣ Hashtags:
-#Scorzy #NBA #NBABasketball #{Team A}
-#{Team B} #Basketball #LiveScore
-
-⚠️ This stream provides LIVE SCORE UPDATES & PLAY-BY-PLAY only.
-❌ No TV footage, no highlights, no copyrighted content.
-✅ 100% original Scorzy scoreboard-based coverage.`,
-            description: `{Team A} vs {Team B} LIVE score updates and
-
+            description: `{Team A} vs {Team B} LIVE score updates and\nplay-by-play coverage on Scorzy for NBA.\nFollow real-time scoring, stats, and possession-by-possession updates.\n\n🆚 Match: {Team A} vs {Team B}\n🏀 League: NBA\n📅 Date: {Date}\n⏰ Time: {Time}\n📍 Coverage: Live Score & Play-by-Play\n\nScorzy brings you fast, accurate NBA live score coverage with\nreal-time updates, team stats, momentum tracking, and key game moments.\nStay connected throughout the game with continuous scoring updates\nand live commentary-style coverage.\n\n📊 This Scorzy LIVE stream includes:\n✔ NBA live score updates\n✔ Play-by-play tracking\n✔ Team & player statistics\n✔ Possession and momentum updates\n✔ Live match flow coverage\n\n🔍 Search Keywords:\n{Team A} vs {Team B} live score\nNBA live\n{Team A} vs {Team B} today\nNBA live score\nNBA live updates\n\n#️⃣ Hashtags:\n#Scorzy #NBA #NBABasketball #{Team A}\n#{Team B} #Basketball #LiveScore\n\n⚠️ This stream provides LIVE SCORE UPDATES & PLAY-BY-PLAY only.\n❌ No TV footage, no highlights, no copyrighted content.\n✅ 100% original Scorzy scoreboard-based coverage.\n\nCopyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational or personal use tips the balance in favor of FAIR USE.`,
             tags: [
                 `nba live score`,
                 `{Team A} vs {Team B} live score`,
