Revise copyright disclaimer in ncaa-bulk.html
Updated copyright disclaimer for fair use clarification.

--- a/ncaa-bulk.html
+++ b/ncaa-bulk.html
@@ -148,7 +148,7 @@ NCAAM live updates
 ⚠️ This stream provides LIVE SCORE UPDATES & PLAY-BY-PLAY only.
 ❌ No TV footage, no highlights, no copyrighted content.
 ✅ 100% original Scorzy scoreboard-based coverage.`,
-Copyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational, or personal use tips the balance in favor of FAIR USE.`
+\nCopyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational, or personal use tips the balance in favor of FAIR USE.`
 
                 tags: [
                     `ncaa college basketball live score`,
@@ -197,7 +197,7 @@ NCAAW live updates
 ⚠️ This stream provides LIVE SCORE UPDATES & PLAY-BY-PLAY only.
 ❌ No TV footage, no highlights, no copyrighted content.
 ✅ 100% original Scorzy scoreboard-based coverage.`,
-Copyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational, or personal use tips the balance in favor of FAIR USE.`
+\nCopyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational, or personal use tips the balance in favor of FAIR USE.`
 
                 tags: [
                     `ncaa college basketball live score`,
