--- a/ncaa-bulk.html
+++ b/ncaa-bulk.html
@@ -148,8 +148,8 @@ NCAAM live updates
 ⚠️ This stream provides LIVE SCORE UPDATES & PLAY-BY-PLAY only.
 ❌ No TV footage, no highlights, no copyrighted content.
 ✅ 100% original Scorzy scoreboard-based coverage.`,
-\nCopyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational, or personal use tips the balance in favor of FAIR USE.`
-
+Copyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational, or personal use tips the balance in favor of FAIR USE.`
+                tags: [
                 tags: [
                     `ncaa college basketball live score`,
                     `{Team A} vs {Team B} live score`,
@@ -196,9 +196,9 @@ NCAAW live updates
 
 ⚠️ This stream provides LIVE SCORE UPDATES & PLAY-BY-PLAY only.
 ❌ No TV footage, no highlights, no copyrighted content.
-✅ 100% original Scorzy scoreboard-based coverage.`,
-\nCopyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational, or personal use tips the balance in favor of FAIR USE.`
-
+✅ 100% original Scorzy scoreboard-based coverage.,
+Copyright Disclaimer: - Under section 107 of the copyright Act 1976, allowance is made for FAIR USE for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statutes that might otherwise be infringing. Non-profit, educational, or personal use tips the balance in favor of FAIR USE.`
+                tags: [
                 tags: [
                     `ncaa college basketball live score`,
                     `{Team A} vs {Team B} live score`,
